[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/examples/voice.gd" type="Script" id=1]
[ext_resource path="res://data/images/microphone-solid.png" type="Texture" id=2]
[ext_resource path="res://data/images/microphone-slash-solid.png" type="Texture" id=3]
[ext_resource path="res://data/images/volume-xmark-solid.png" type="Texture" id=4]
[ext_resource path="res://data/images/headphones-solid.png" type="Texture" id=5]
[ext_resource path="res://data/images/volume-high-solid.png" type="Texture" id=6]
[ext_resource path="res://data/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=8]
[ext_resource path="res://data/images/optimal.png" type="Texture" id=9]
[ext_resource path="res://data/fonts/sub-titles.tres" type="DynamicFont" id=10]
[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="AudioStreamGenerator" id=4]
buffer_length = 0.1

[sub_resource type="AudioStreamSample" id=3]
format = 1

[node name="Voice" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 11 )]

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Voice Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )
text = "Here we test some functionality for Steam Voice to capture and playback voice chat.

You can press-to-talk or toggle voice on/off.  To hear yourself, enable loopback.  You can also change the optimal sample rate by pressing the corresponding button.  However, as Valve notes, using the optimal sample rate will result in lower CPU usage but may sound worse.

You may also notice the playback seems a little jumpy or choppy.  No one has quite figured out why that is yet.  If you can solve this, please open a pull-request!"
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Notifications" type="VBoxContainer" parent="Frame/Main" index="2"]
unique_name_in_owner = true
margin_top = 271.0
margin_right = 905.0
margin_bottom = 546.0
rect_min_size = Vector2( 0, 275 )
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="On" type="TextureRect" parent="Frame/Main/Notifications"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/On"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "Microphone On"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Off" type="TextureRect" parent="Frame/Main/Notifications"]
margin_top = 47.0
margin_right = 40.0
margin_bottom = 79.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/Off"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "Microphone Off"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Loopback" type="TextureRect" parent="Frame/Main/Notifications"]
margin_top = 94.0
margin_right = 40.0
margin_bottom = 126.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/Loopback"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 10 )
text = "Loopback Enabled"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Speaking" type="TextureRect" parent="Frame/Main/Notifications"]
margin_top = 141.0
margin_right = 40.0
margin_bottom = 173.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/Speaking"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "Someone Speaking"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Mute" type="TextureRect" parent="Frame/Main/Notifications"]
margin_top = 188.0
margin_right = 40.0
margin_bottom = 220.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/Mute"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "Voice Muted"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Optimal" type="TextureRect" parent="Frame/Main/Notifications"]
margin_top = 235.0
margin_right = 40.0
margin_bottom = 267.0
rect_min_size = Vector2( 40, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Notifications/Optimal"]
margin_left = 50.0
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "Using Optimal Sample Rate"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Control" parent="Frame/Main" index="3"]
margin_top = 571.0
margin_right = 905.0
margin_bottom = 571.0
__meta__ = {
"_edit_lock_": true
}

[node name="Local" type="AudioStreamPlayer" parent="Frame/Main/Players"]
stream = SubResource( 4 )

[node name="Network" type="AudioStreamPlayer" parent="Frame/Main/Players"]
stream = SubResource( 3 )

[node name="Title" parent="Frame/Sidebar/Options/List" index="0"]
text = "Voice Functions"

[node name="ToTalk" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 67.0
rect_min_size = Vector2( 250, 35 )
theme = ExtResource( 8 )
text = "Press-To-Talk"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="ToggleVoice" type="Button" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 77.0
margin_right = 270.0
margin_bottom = 112.0
rect_min_size = Vector2( 250, 35 )
theme = ExtResource( 8 )
text = "Toggle Voice"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Loopback" type="Button" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 122.0
margin_right = 270.0
margin_bottom = 157.0
rect_min_size = Vector2( 250, 35 )
theme = ExtResource( 8 )
text = "Loopback"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Optimal" type="Button" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 167.0
margin_right = 270.0
margin_bottom = 202.0
rect_min_size = Vector2( 250, 35 )
theme = ExtResource( 8 )
text = "Optimal Sample Rate"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer" type="Label" parent="Frame/Sidebar/Options/List" index="5"]
margin_top = 212.0
margin_right = 270.0
margin_bottom = 231.0
rect_min_size = Vector2( 0, 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="6"]
margin_top = 241.0
margin_right = 270.0
margin_bottom = 269.0
theme = ExtResource( 8 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="Frame/Sidebar/Options/List/ToTalk" to="." method="_on_ToTalk_button_down"]
[connection signal="button_up" from="Frame/Sidebar/Options/List/ToTalk" to="." method="_on_ToTalk_button_up"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/ToggleVoice" to="." method="_on_ToggleVoice_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Loopback" to="." method="_on_Loopback_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Optimal" to="." method="_on_Optimal_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_Back_pressed"]

[editable path="Frame"]
